# SCvxDemo

./: README.md  demo.ipynb  pyproject.toml
scvx/: dimensionalization.py  integrator.py  labeled_dim_view.py  labeled_views.py  model.py  named_arrays.py  named_dim_view.py  named_views.py  scvx.py  stc.py  test.py  trajectory.py
scvx/models/: quadcopter_fixedft.py
