[project]
name = "scvxdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.3",
    "ecos>=2.0.14",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
]
